--- a/pokedex.css
+++ b/pokedex.css
@@ -20,6 +20,7 @@ body{
     width: 250px;
     height:500px;
     background-color: cyan;
+    text-align: center;
 }
 
 #pokemon-list{
@@ -36,4 +37,14 @@ body{
     background-color: white;
     margin: 5px;
     padding: 5px;
+}
+
+#pokemon-info img{
+    width:160px;
+    height: 160px;
+    border: 1px solid black;
+    border-radius: 10px;
+    margin-top: 20px;
+    background-color: white;
+
 }
