--- a/pokedex.css
+++ b/pokedex.css
@@ -1,5 +1,5 @@
 body{
-    background: url("pokemon-bg.jpg") no-repeat;
+    background: url("./pokemon-bg.jpg") no-repeat;
     background-size: cover;
     font-famiy: Arial, Helvetica, sans-serif;
 }
@@ -15,7 +15,7 @@ body{
     margin: 0 auto;
     margin-top: 60px;
 
-    background: url("pokeball.jpg") no-repeat;
+    background: url("./pokeball.jpg") no-repeat;
     background-size: cover;
 
 }
