Add a new background

--- a/pokedex.css
+++ b/pokedex.css
@@ -1,5 +1,5 @@
 body{
-    background: url("./images/pokemon-bg.jpg") no-repeat;
+    background: url("./images/pokemonbackground.jpg") no-repeat;
     background-size: cover;
     font-famiy: Arial, Helvetica, sans-serif;
 }
